# docs/swagger.json
@@ -90,7 +90,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Person"
+                                "$ref": "#/definitions/adapterhttp.Person"
                             }
                         }
                     },
@@ -124,7 +124,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreatePersonRequest"
+                            "$ref": "#/definitions/adapterhttp.CreatePersonRequest"
                         }
                     }
                 ],
@@ -132,7 +132,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Person"
+                            "$ref": "#/definitions/adapterhttp.Person"
                         }
                     },
                     "400": {
@@ -174,7 +174,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreatePersonRequest"
+                            "$ref": "#/definitions/adapterhttp.CreatePersonRequest"
                         }
                     }
                 ],
@@ -182,7 +182,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CreatePersonRequest"
+                            "$ref": "#/definitions/adapterhttp.CreatePersonRequest"
                         }
                     },
                     "400": {
@@ -238,7 +238,7 @@
         }
     },
     "definitions": {
-        "models.CreatePersonRequest": {
+        "adapterhttp.CreatePersonRequest": {
             "type": "object",
             "properties": {
                 "name": {
@@ -255,7 +255,7 @@
                 }
             }
         },
-        "models.Person": {
+        "adapterhttp.Person": {
             "type": "object",
             "properties": {
                 "age": {
